# rust-learn

./: .gitignore  README.md  SYLLABUS.md
learn-notes/: cargo-hello-world.md  data-types.md  variables.md
projects/01-hello-world/: Cargo.toml
projects/01-hello-world/src/: main.rs
projects/02-variables/: Cargo.toml
projects/02-variables/src/: main.rs
projects/03-data-types/: Cargo.toml
projects/03-data-types/src/: main.rs
